--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/admin_panel
+MONGO_URI=mongodb+srv://pawaniimtu:kRe60F5wLoVL0vVA@gameapp.7vmubcf.mongodb.net/?retryWrites=true&w=majority&appName=GameApp
 JWT_SECRET=colorgame@123
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
